2007-11-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/svndiff.c:
   Fix sign comparison warning.
 * plugins/svndiff.c:
   Fix gtk_widget_destroy() warning when unloading plugin and no svn
   binary is in $PATH.


2007-11-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * HACKING:
   Update 'Adding a filetype' section for new highlighting.c code.


2007-11-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c, src/document.c, src/utils.c:
   Don't use unnecessary #ifdefs for utils_get_locale_from_utf8().


2007-11-05  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/svndiff.c:
   Added function for svn revert and check before complete loading of
   then plugin if svn is inside $PATH.
   Added patch from Yura Siamashka to re-use an already created tab
   for a new diff on the same file. Thanks.


2007-11-04  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/build.c:
   Fix error in Compile and Build commands on Windows if the command
   contains double quotes.
   Fix error in Build command when the executable file name contains
   spaces(Linux and Windows).
 * src/filetypes.c: Add support for env wrapper in shebang detection
                    (inspired by a patch from Yura Siamashka).
 * src/plugindata.h, src/plugins.c:
   Add document_set_text_changed() to the plugin API.
 * src/main.c, src/utils.c, src/utils.h, src/win32.c, src/win32.h:
   Fix crashes on Windows when configuration directory could not be
   created.
   Fix problems when configuration directory path contains special
   characters.
 * tagmanager/tm_workspace.c: Use g_unlink() instead of unlink().
 * src/build.c:
   Use g_unlink() instead of unlink().
   Minor code cleanups and add some sanity checks.
   Fix broken Run command on Windows by not changing Geany's working
   directory (this might break other things, unfinished).


2007-11-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/sciwrappers.c: