@@ -5,6 +5,10 @@
  * plugins/svndiff.c:
    Fix gtk_widget_destroy() warning when unloading plugin and no svn
    binary is in $PATH.
+ * plugins/svndiff.c:
+   Add menu separator so users don't accidentally click revert and lose
+   all their work.
+   Capitalize revert menu item.
 
 
 2007-11-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
